# browser_manager

./: .gitignore  README.md  pyproject.toml  setup.py  test_browser_manager.py
browser_manager/: __init__.py  browser_config.py  browser_connection_error.py  browser_launch_error.py  browser_launcher.py  browser_manager.py  local_browser_launcher.py  neko_browser_launcher.py  page_actions.py  page_manager.py  window_control.ps1  window_manager.py
