[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "browser-manager"
version = "0.1.0"
description = "Plug-and-play browser automation with Playwright and Neko Docker"
readme = "README.md"
authors = [{ name = "Jebin Einstein", email = "jebineinstein@gmail.com" }]
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "playwright",
    "requests",
    "psutil",
    "custom_logger @ git+https://github.com/jebin2/custom_logger.git",
]

[project.scripts]
browser-manager = "browser_manager.browser_manager:main"

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools]
include-package-data = true
